--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!-- 
 11111111112222222222333333333344444444445555555555666666666677777777778888888888
- -->
+Nas próximas versões devo 
+- tirar o botão "Start game"
+- tirar a barra da tela
+- trocar as ações das teclas esq / dir por ações do mouse
+-->
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -20,100 +24,115 @@
 			display: block;
 		}
     </style>
-  </head>
-  <body>
-    <canvas id="meuCanvas" width="320" height="480"></canvas>
-	<button id="runButton">Start game</button>
-    <script>
-		const canvas = document.getElementById("meuCanvas");
-		const ctx = canvas.getContext("2d");
-		const ballRadius = 10;		
-		
-		//Direção da bola
-		let x = canvas.width / 2;
-		let y = canvas.height - 30;
-		
-		//Velocidade da bola
-		let dx = 2;
-		let dy = -2;
-		
-		//Botão esquerdo do mouse
-		let leftPressed = false;
+</head>
+<body>
 
-		function drawCampo() {
-			ctx.beginPath();
-			ctx.arc(50, 50, 20, 0, Math.PI * 2);
-			ctx.fillStyle = "blue";
-			ctx.fill();
-			ctx.closePath();
+<canvas id="myCanvas" width="320" height="480"></canvas>
 
-			ctx.beginPath();
-			ctx.arc(200, 200, 20, 0, Math.PI * 2);
-			ctx.fillStyle = "gray";
-			ctx.fill();
-			ctx.closePath();
+<button id="runButton">Start game</button>
 
-			ctx.beginPath();
-			ctx.arc(250, 350, 20, 0, Math.PI * 2);
-			ctx.fillStyle = "red";
-			ctx.fill();
-			ctx.closePath();
-		}
+<script>
+    var canvas = document.getElementById("myCanvas");
+    var ctx = canvas.getContext("2d");
+    var ballRadius = 5;
+    var x = canvas.width/2;
+    var y = canvas.height-30;
+    var dx = 1;
+    var dy = -1;
+    var paddleHeight = 10;
+    var paddleWidth = 75;
+    var paddleX = (canvas.width-paddleWidth)/2;
+    var rightPressed = false;
+    var leftPressed = false;
 
-		function drawBall() {
-		  ctx.beginPath();
-		  ctx.arc(x, y, ballRadius, 0, Math.PI * 2);
-		  ctx.fillStyle = "#0095DD";
-		  ctx.fill();
-		  ctx.closePath();
-		}
+    document.addEventListener("keydown", keyDownHandler, false);
+    document.addEventListener("keyup", keyUpHandler, false);
 
-		function draw() {
-		  ctx.clearRect(0, 0, canvas.width, canvas.height);
-		  drawCampo();
-		  drawBall();
-			if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
-			  dx = -dx;
-			}
-			if (y + dy > canvas.height - ballRadius || y + dy < ballRadius) {
-			  dy = -dy;
-}
-		  x += dx;
-		  y += dy;
+    function keyDownHandler(e) {
+        if(e.code  == "ArrowRight") {
+            rightPressed = true;
+        }
+        else if(e.code == 'ArrowLeft') {
+            leftPressed = true;
+        }
+    }
+    function keyUpHandler(e) {
+        if(e.code  == "ArrowRight") {
+            rightPressed = false;
+        }
+        else if(e.code == 'ArrowLeft') {
+            leftPressed = false;
+        }
+    }
 
-		}
-/*
- * Adiocionei alguns eventos para as teclas, mas não finalizei e não estão
- * funcionando, pois a ideia é colocar lógica no clique do mouse.
- */
-		function startGame() {
-document.addEventListener("keydown", keyDownHandler, false);
-document.addEventListener("keyup", keyUpHandler, false);
-function keyDownHandler(e) {
-  if (e.key === "Right" || e.key === "ArrowRight") {
-    rightPressed = true;
-  } else if (e.key === "Left" || e.key === "ArrowLeft") {
-    leftPressed = true;
-  }
-}
+	function drawCampo() {
+		ctx.beginPath();
+		ctx.arc(50, 50, 10, 0, Math.PI * 2);
+		ctx.fillStyle = "blue";
+		ctx.fill();
+		ctx.closePath();
 
-function keyUpHandler(e) {
-  if (e.key === "Right" || e.key === "ArrowRight") {
-    rightPressed = false;
-  } else if (e.key === "Left" || e.key === "ArrowLeft") {
-    leftPressed = false;
-  }
-}
+		ctx.beginPath();
+		ctx.arc(200, 200, 10, 0, Math.PI * 2);
+		ctx.fillStyle = "gray";
+		ctx.fill();
+		ctx.closePath();
 
-		  const interval = setInterval(draw, 10);
-		}
+		ctx.beginPath();
+		ctx.arc(250, 350, 10, 0, Math.PI * 2);
+		ctx.fillStyle = "red";
+		ctx.fill();
+		ctx.closePath();
+	}
 
-		document.getElementById("runButton").addEventListener("click", function () {
-		  startGame();
-		  this.disabled = true;
-		});
+    function drawBall() {
+        ctx.beginPath();
+        ctx.arc(x, y, ballRadius, 0, Math.PI*2);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+    }
+    function drawPaddle() {
+        ctx.beginPath();
+        ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
+        ctx.fillStyle = "#0095DD";
+        ctx.fill();
+        ctx.closePath();
+    }
 
+    function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawBall();
+        drawPaddle();
+		drawCampo();
 
-    </script>
-  </body>
+        if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
+            dx = -dx;
+        }
+        if(y + dy > canvas.height-ballRadius || y + dy < ballRadius) {
+            dy = -dy;
+        }
+
+        if(rightPressed && paddleX < canvas.width-paddleWidth) {
+            paddleX += 7;
+        }
+        else if(leftPressed && paddleX > 0) {
+            paddleX -= 7;
+        }
+
+        x += dx;
+        y += dy;
+    }
+	
+	function startGame() {
+	  const interval = setInterval(draw, 10);
+	}
+
+	document.getElementById("runButton").addEventListener("click", function () {
+	  startGame();
+	  this.disabled = true;
+	});
+</script>
+
+</body>
 </html>
